# ollama-setup

./: Makefile  README.md  main.py  pyproject.toml
scripts/: install_dependencies.sh  pyenv_setup.sh
