[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Robert Kraig <robertkraig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
crewai = "^0.41.1"
langchain-community = "^0.2.10"

[tool.poetry.group.dev.dependencies]
crewai = "^0.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
